prevent inputs and buttons from being squished by flex

--- a/buntpapier/components/button.styl
+++ b/buntpapier/components/button.styl
@@ -8,7 +8,7 @@ button()
 		font-weight 500
 		line-height $button-height
 		vertical-align middle
-
+		flex-shrink 0
 		// overflow hidden
 		outline none
 		border none
