--- a/buntpapier/components/checkbox.styl
+++ b/buntpapier/components/checkbox.styl
@@ -3,6 +3,7 @@ checkbox()
 		cursor pointer
 		position relative
 		display flex
+		flex-shrink 0
 		input
 			position absolute
 			cursor inherit
