--- a/buntpapier/components/icon-button.styl
+++ b/buntpapier/components/icon-button.styl
@@ -5,6 +5,7 @@ icon-button()
 	.{$prefix}-icon-button
 		line-height $button-height
 		vertical-align middle
+		flex-shrink 0
 
 		background none
 		outline none
