--- a/buntpapier/components/input.styl
+++ b/buntpapier/components/input.styl
@@ -4,7 +4,7 @@ input()
 		flex-direction column
 		height 72px
 		padding-top 16px
-
+		flex-shrink 0
 		.label-input-container
 			position relative
 		input
