--- a/buntpapier/components/switch.styl
+++ b/buntpapier/components/switch.styl
@@ -5,6 +5,7 @@ switch()
 		display flex
 		height 20px
 		margin-bottom 8px
+		flex-shrink 0
 		input
 			position absolute
 			cursor inherit
